feat: 카카오 메세지 전송 실패 시 경고 문구 구현

--- a/public/index.html
+++ b/public/index.html
@@ -5,19 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="./logo.svg" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="경북대학교 휠체어 사용 학생들을 위한 건물 간 이동 시간 고려 시간표 작성 도우미 및 경북대 내 길 찾기 서비스" />
+    <meta
+      name="description"
+      content="경북대학교 휠체어 사용 학생들을 위한 건물 간 이동 시간 고려 시간표 작성 도우미 및 경북대 내 길 찾기 서비스"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="upgrade-insecure-requests"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet" />
-     <!-- jQuery 추가 -->
-     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    
-     <!-- TMAP API 추가 -->
-     <script src="https://apis.openapi.sk.com/tmap/jsv2?version=1&appKey=6at5K9fBTOaKBA3IBDJRR2MhgBebnfbSHm0Fpgbf"></script>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- jQuery 추가 -->
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
+    <!-- TMAP API 추가 -->
+    <script src="https://apis.openapi.sk.com/tmap/jsv2?version=1&appKey=6at5K9fBTOaKBA3IBDJRR2MhgBebnfbSHm0Fpgbf"></script>
 
     <title>WheelCampus</title>
   </head>
